--- a/VlimsWeb/ClientApp/src/app/add-document-template-config/add-document-template-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-document-template-config/add-document-template-config.component.html
@@ -13,9 +13,9 @@
             <label for="BrandName" class="col-sm-4 col-form-label">Template Name</label>
         
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="BrandName" [(ngModel)]="newdoctemplate.Templatename"
-              pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Template Name"
-              #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+            <input type="text" class="form-control" id="TemplateName" [(ngModel)]="newdoctemplate.Templatename" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+              pattern='[A-Za-z\\s]*' name="TemplateName" aria-describedby="productname" placeholder="Enter Template Name"
+              #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && TemplateName.invalid }" required />
             </div>
           </div>
           <div class="form-group row">
@@ -23,9 +23,9 @@
             <label for="BrandName" class="col-sm-4 col-form-label">Unique Code</label>
         
         <div class="col-sm-8">
-            <input type="text" class="form-control" id="BrandName" [(ngModel)]="newdoctemplate.Uniquecode"
-              pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Unique Code"
-              #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+            <input type="text" class="form-control" id="Uniquecode" [(ngModel)]="newdoctemplate.Uniquecode" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+              pattern='[A-Za-z\\s]*' name="Uniquecode" aria-describedby="productname" placeholder="Enter Unique Code"
+              #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && Uniquecode.invalid }" required />
             </div>
           </div>
           <div class="form-group row">
@@ -33,8 +33,8 @@
             <label for="BrandName" class="col-sm-4 col-form-label">Document Type</label>
         
         <div class="col-sm-8">
-            <select class="form-control" [(ngModel)]="newdoctemplate.Documenttype" name="typeId" #DTCId="ngModel"
-            [ngClass]="{ 'is-invalid': fm.submitted && DTCId.invalid }" required>
+            <select class="form-control" [(ngModel)]="newdoctemplate.documenttype" name="DocumentType" id="DocumentType" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+            [ngClass]="{ 'is-invalid': fm.submitted && DocumentType.invalid }" required>
             <option [ngValue]=null>Select</option>
             <option *ngFor="let type of doctypes" value={{type.Documenttypename}}>{{type?.Documenttypename}}</option>
           </select>
@@ -50,7 +50,10 @@
             <label for="BrandName" class="col-sm-3 col-form-label" style="text-align: center;">Rows</label>
         
             <div class="col-sm-3">
-                  <select class="form-control" [(ngModel)]="newdoctemplate.rows" name="typeId" #typeId="ngModel"
+              <input type="number" class="form-control" id="HeaderRows" [(ngModel)]="newdoctemplate.rows" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+              min="1" max="10"  name="HeaderRows"  step="1"
+               [ngClass]="{ 'is-invalid': fm.submitted && HeaderRows.invalid }" required  />
+                  <!-- <select class="form-control" [(ngModel)]="newdoctemplate.rows" name="typeId" #typeId="ngModel" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
                   [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
                   <option value=""  >Select</option>
                   <option value="1" >1</option>
@@ -63,11 +66,14 @@
                   <option value="8" >8</option>
                   <option value="9" >9</option>
                   <option value="10" >10</option>
-                </select>
+                </select> -->
                 </div>
                 <label for="BrandName" class="col-sm-3 col-form-label" style="text-align: center;">Columns</label>
                 <div class="col-sm-3">
-                    <select class="form-control" [(ngModel)]="newdoctemplate.columns" name="typeId" #typeId="ngModel"
+                  <input type="number" class="form-control" id="HeaderColumns" [(ngModel)]="newdoctemplate.columns" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+                  min="1" max="10"  name="HeaderColumns"  
+                   [ngClass]="{ 'is-invalid': fm.submitted && HeaderColumns.invalid }" required />
+                    <!-- <select class="form-control" [(ngModel)]="newdoctemplate.columns" name="typeId" #typeId="ngModel" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
                     <option value=""  >Select</option>
                   <option value="1" >1</option>
@@ -80,7 +86,7 @@
                   <option value="8" >8</option>
                   <option value="9" >9</option>
                   <option value="10" >10</option>
-                  </select>
+                  </select> -->
                   </div>
           </div>
           <div class="form-group row">
@@ -92,7 +98,10 @@
             <label for="BrandName" class="col-sm-3 col-form-label" style="text-align: center;">Rows</label>
         
             <div class="col-sm-3">
-                  <select class="form-control" [(ngModel)]="newdoctemplate.footerrows" name="typeId" #typeId="ngModel"
+              <input type="number" class="form-control" id="FooterRows" [(ngModel)]="newdoctemplate.footerrows" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+              min="1" max="10"  name="FooterRows"  
+               [ngClass]="{ 'is-invalid': fm.submitted && FooterRows.invalid }" required />
+                  <!-- <select class="form-control" [(ngModel)]="newdoctemplate.footerrows" name="typeId" #typeId="ngModel" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
                   [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
                   <option value=""  >Select</option>
                   <option value="1" >1</option>
@@ -105,11 +114,14 @@
                   <option value="8" >8</option>
                   <option value="9" >9</option>
                   <option value="10" >10</option>
-                </select>
+                </select> -->
                 </div>
                 <label for="BrandName" class="col-sm-3 col-form-label" style="text-align: center;">Columns</label>
                 <div class="col-sm-3">
-                    <select class="form-control" [(ngModel)]="newdoctemplate.footercolumns" name="typeId" #typeId="ngModel"
+                  <input type="number" class="form-control" id="FooterColumns" [(ngModel)]="newdoctemplate.footercolumns" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+              min="1" max="10"  name="FooterColumns"  
+               [ngClass]="{ 'is-invalid': fm.submitted && FooterColumns.invalid }" required />
+                    <!-- <select class="form-control" [(ngModel)]="newdoctemplate.footercolumns" name="typeId" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
                     <option value=""  >Select</option>
                     <option value="1" >1</option>
@@ -122,14 +134,17 @@
                     <option value="8" >8</option>
                     <option value="9" >9</option>
                     <option value="10" >10</option>
-                  </select>
+                  </select> -->
                   </div>
           </div>
           
         </div>
         <div class="modal-footer">
+          <button type="button" class="btn btn-success" (click)="closepopup();" *ngIf="viewMode">Approve</button>
+          <button type="button" class="btn btn-info" (click)="closepopup();" *ngIf="viewMode">Re-Initiate</button>
+          <button type="button" class="btn btn-danger" (click)="closepopup();" *ngIf="viewMode">Reject</button>
           <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary"  *ngIf="!viewMode">Submit</button>
         </div>
       </form>
     </div>
