--- a/VlimsWeb/ClientApp/src/app/document-effective-edit/document-effective-edit.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-effective-edit/document-effective-edit.component.html
@@ -10,22 +10,22 @@
       <div class="modal-body">
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document Title :</label>
+          <label  class="col-sm-4 col-form-label">Document Title :</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="DocumentName" [(ngModel)]="adddocreq.DocumentTitle"
-                   pattern='[A-Za-z\\s]*' name="DocumentName" aria-describedby="productname" placeholder="DocumentTitle"
+            <input type="text" class="form-control" id="documenttitle" [(ngModel)]="adddocreq.documenttitle"
+                   pattern='[A-Za-z\\s]*' name="documenttitle" aria-describedby="productname" placeholder="documenttitle"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
         </div>
 
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document No :</label>
+          <label  class="col-sm-4 col-form-label">Document No :</label>
 
           <div class="col-sm-8">
 
-            <input type="text" class="form-control" id="DocumentNo" [(ngModel)]="adddocreq.DocumentNo"
-                   pattern='[A-Za-z\\s]*' name="DocumentNo" aria-describedby="productname" placeholder="DocumentNo"
+            <input type="text" class="form-control" id="DocumentNo" [(ngModel)]="adddocreq.documentno"
+                   pattern='[A-Za-z\\s]*' name="documentno" aria-describedby="productname" placeholder="documentno"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
 
           </div>
@@ -47,7 +47,7 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Department :</label>
 
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="Department" [(ngModel)]="adddocreq.department"
+            <input type="text" class="form-control" id="Department" [(ngModel)]="adddocreq.Department"
                    pattern='[A-Za-z\\s]*' name="Department" aria-describedby="productname" placeholder="Department"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
@@ -58,7 +58,7 @@
 
           <div class="col-sm-8">
             <input  type="url"
-                   name="Document" aria-describedby="Document" placeholder="Document" [(ngModel)]="adddocreq.Document"
+                   name="Document" aria-describedby="Document" placeholder="Document" [(ngModel)]="adddocreq.document"
                    #BrandName="ngModel" />
           </div>
         </div>
@@ -75,7 +75,7 @@
 
           <label for="BrandName" class="col-sm-4 col-form-label">Review Date :</label>
           <div class="col-sm-8">
-            <input type="date" class="form-control" id="Review" [(ngModel)]="adddocreq.EffectiveDate"
+            <input type="date" class="form-control" id="Review" [(ngModel)]="adddocreq.ReviewDate"
                    name="Review" aria-describedby="Review" placeholder="Review"
                    #BrandName="ngModel" />
           </div>
