--- a/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="col col-lg-3">
-      <div class="card" (click)="navigateTo('document-types')">
+      <div class="card" (click)="navigateTo('admin')">
         <div class="card-body">
           <i class="fa-solid fa-users-gear"></i>
           <h5 class="card-title">Admin Management</h5>
