--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -1,5 +1,4 @@
-
-<div class="card shadow mb-4" style="padding-top: 2px;">
+<!--<div class="card shadow mb-4" style="padding-top: 2px;">
     <div class="card-header py-3">
         <div col-6 style="float: left;">
         <h6 class="m-0 font-weight-bold text-primary">Department Configuration</h6>
@@ -10,10 +9,10 @@
     </div>
     </div>
 <div class="card-body">
-   
+
   <div class="table-responsive">
     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>   0" >
-       
+
       <thead>
         <tr>
           <th scope="col">S.No</th>
@@ -38,18 +37,68 @@
           <td>
             <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
               data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);"> <span
-                class="fa fa-edit"></span> </button>
-            <!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
-          </td>
+                class="fa fa-edit"></span> </button>-->
+<!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
+<!--</td>
         </tr>
       </tbody>
 
     </table>
-  
+
   </div>
- 
+
   <div *ngIf="types?.length==0">
     <p>No items to display</p>
   </div>
 </div>
-</div>
+</div>-->
+<div class="container-fluid">
+  <div class="row p-2">
+    <div class="col">
+
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="page-title flex-grow-1">Department Configuration</h4>
+        <div class="d-flex page-title-actions">
+          <input type="text" class="form-control" placeholder="Search">
+          <!--<button class="btn btn-primary" type="button" [routerLink]="['/mainpage/hierarchy/adddept']">
+            Add
+          </button>-->
+          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDepartment()">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row p-2">
+    <div class="col">
+      <div class="p-4 bg-white shadow-dark rounded-2">
+        <p-table [value]="types" tableStyleClass="table table-striped">
+          <ng-template pTemplate="header">
+            <tr>
+              <th>S.No</th>
+              <th pSortableColumn="DepartmentName" style="width:20%">Department Name<p-sortIcon field="DepartmentName"></p-sortIcon></th>
+              <th pSortableColumn="DepartmentCode" style="width:10%">Department Code <p-sortIcon field="DepartmentCode"></p-sortIcon></th>
+              <th pSortableColumn="Description" style="width:15%">Comments<p-sortIcon field="Description"></p-sortIcon></th>
+              <th pSortableColumn="RegisteredBy" style="width:20%">Registered by<p-sortIcon field="RegisteredBy"></p-sortIcon></th>
+              <th pSortableColumn="RegisteredOn" style="width:200px">Registered On <p-sortIcon field="RegisteredOn"></p-sortIcon></th>
+              <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+              <th style="width:80px">Actions</th>
+
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-doc let-i="rowIndex">
+            <tr>
+              <th>{{i+1}}</th>
+              <td>{{doc?.DepartmentName}}</td>
+              <td>{{doc?.DepartmentCode }}</td>
+              <td>{{doc?.Comments}}</td>
+              <td>{{doc?.ModifiedBy}}</td>
+              <td>{{doc?.ModifiedDate  | date}}</td>              
+              <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
+              <td class="text-center" (click)="editBrand(doc)"><i class="bi bi-pencil"></i></td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </div>
+</div>  
