--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Add-user-group-configuration/add-usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Add-user-group-configuration/add-usergroupconfiguration.component.html
@@ -1,65 +1,99 @@
-<div class="card shadow mb-4" style="padding-top: 2px;">
-  <div class="card-header py-3">
-    <div col-12 style="float: left;">
-      <h6 class="m-0 font-weight-bold text-primary">Add  New User Group Registration</h6>
+<div class="container-fluid">
+  <div class="row p-2">
+    <div class="col">
+      <h4 class="page-title">{{title}}</h4>
     </div>
-
   </div>
-  <div class="card-body">
-    <form (ngSubmit)="submit(newdept)" #fm="ngForm">
-      <div class="modal-body">
-        <div class="form-group row">
-
-          <label for="UserGroupName" class="col-sm-4 col-form-label">User Group Name</label>
-
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="UserGroupName" [(ngModel)]="newdept.usergroupname"
-                   pattern='[A-Za-z\\s]*' name="UserGroupName" aria-describedby="productname" placeholder="Enter User Group Name"
-                   #BrandName="ngModel"  />
+  <div class="row p-2">
+    <div class="col">
+      <form (ngSubmit)="adddoctype(newdept)"  #fm="ngForm">
+      <div class="p-4 bg-white shadow-dark rounded-2">
+        
+          <div class="form-group row">
+            <label for="usergroupname" class="col-sm-2 col-form-label"
+              >User Group Name</label
+            >
+            <div class="col-sm-10">
+              <input
+                type="text"
+                class="form-control"
+                id="usergroupname"
+                name="usergroupname"
+                placeholder="User Group Name"
+                [(ngModel)]="newdept.usergroupname" 
+               
+              />
+            </div>
           </div>
-        </div>
-        <div class="form-group row">
-
-          <label for="BrandName" class="col-sm-4 col-form-label">User Group Code</label>
-
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="UserGroupCode" [(ngModel)]="newdept.code"
-                   pattern='[A-Za-z\\s]*' name="UserGroupCode" aria-describedby="productname" placeholder="Enter UserGroupCode Code"
-                   #BrandName="ngModel"  />
+          <div class="form-group row">
+            <label for="prefix" class="col-sm-2 col-form-label">User Group Code</label>
+            <div class="col-sm-10">
+              <input
+                type="text"
+                class="form-control"
+                id="code"
+                name="code"
+                placeholder="Prefix"
+                [(ngModel)]="newdept.code" 
+                
+              />
+            </div>
           </div>
-        </div>
-        <div class="form-group row">
-
-          <label for="BrandName" class="col-sm-4 col-form-label">Users</label>
-
-          <div class="col-sm-8">
-            <!--[(ngModel)]="adddocreq.department"-->
-            <select class="form-control" [(ngModel)]="newdept.users"  name="Assigntodepartment" id="Assigntodepartment" [disabled]="viewMode" 
-                    >
-              <option value="Select">Select</option>
-              <option *ngFor="let user of types" value={{user.UserID}}>{{user?.UserID}}</option>
-            </select>
-            <!--<input type="text" class="form-control" id="BrandName" [(ngModel)]="newdept.Users"
-  pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Users"
-  #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
+          <div class="form-group row">
+            <label for="department" class="col-sm-2 col-form-label"
+              >Users</label
+            >
+            <div class="col-sm-10">
+             
+                <div *ngIf="viewMode">
+                <p-multiSelect [options]="types" [(ngModel)]="newdept.users" defaultLabel="Select a Users" name="users" id="users" optionLabel="UserID" display="chip" [disabled]="viewMode">
+                  <ng-template pTemplate="newdept.users" let-options>
+                    <ng-container *ngTemplateOutlet="customTemplate; context: {$implicit: options}"></ng-container>
+                  </ng-template>
+                </p-multiSelect>
+                <ng-template #customTemplate let-options>
+                  <div class="p-chips-container p-inputtext" *ngIf="types && types.length">
+                    <span class="p-chip p-highlight">{{ types[0].UserID }}</span>
+                    <span *ngIf="types.length > 1" class="p-chip">+{{ types.length - 1 }}</span>
+                  </div>
+                </ng-template>
+              </div>
+              <div *ngIf="!viewMode">
+              <p-multiSelect [options]="types" [(ngModel)]="newdept.users" defaultLabel="Select a Users" 
+              name="users" id="users" optionLabel="UserID" (ngModelChange)="calculateTotalUsers()"
+              
+               display="chip">
+              </p-multiSelect>
+            </div>
+            </div>
           </div>
+          
+          <div class="form-group row">
+            <label for="prefix" class="col-sm-2 col-form-label">Total Users</label>
+            <div class="col-sm-10">
+              <input
+                type="number"
+                class="form-control"
+                id="totalusers"
+                name="totalusers"
+                placeholder="Total Users"
+                [(ngModel)]="newdept.totalusers"  readonly
+                
+              />
+            </div>
+          </div>
+      </div>
+
+      <div class="form-group row my-4">
+        <div class="col-sm-10 offset-sm-2">
+          <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
+          <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+          <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
         </div>
       </div>
-      <div class="form-group row">
 
-        <label for="TotalUsers" class="col-sm-4 col-form-label"> &nbsp;&nbsp;&nbsp;&nbsp;Total Users</label>
-
-        <div class="col-sm-8">
-          <input type="text" class="form-control" id="TotalUsers" [(ngModel)]="newdept.totalusers"
-                 pattern='[A-Za-z\\s]*' name="TotalUsers" aria-describedby="productname" placeholder="Enter TotalUsers"
-                 #BrandName="ngModel"  />
-        </div>
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </div>
     </form>
+    </div>
   </div>
 </div>
+
