--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
@@ -57,12 +57,13 @@
     </div>
 
     <div class="col col-lg-3">
-      <div class="card" (click)="navigateTo('UserGroup')">
+      <div class="card" (click)="navigateTo('groups')">
         <div class="card-body">
           <i class="fa fa-chart-line"></i>
           <h5 class="card-title">User Group Configurations</h5>
         </div>
       </div>
+    
     </div>
     <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('Roles')">
@@ -72,6 +73,13 @@
         </div>
       </div>
     </div>
-
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('departments')">
+        <div class="card-body">
+          <i class="fa fa-chart-line"></i>
+          <h5 class="card-title">Departments</h5>
+        </div>
+      </div>
+    </div>
   </div>
   </div>
