--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
@@ -69,12 +69,12 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Department Code</label>
+            <label for="DepartmentCode" class="col-sm-2 col-form-label">Department Code</label>
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
                      id="DepartmentCode"
-                     name="prefix"
+                     name="DepartmentCode"
                      placeholder="Department Code"
                      [(ngModel)]="newdept.DepartmentCode" [disabled]="viewMode" />
             </div>
@@ -97,8 +97,9 @@
 
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
-            <button type="button" class="btn btn-outline-secondary mx-2" (click)="closepopup()">Close</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!editMode">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
           </div>
         </div>
 
