--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
@@ -66,21 +66,19 @@
         <p-table [value]="types" tableStyleClass="table table-striped">
           <ng-template pTemplate="header">
             <tr>            
-
-              <th pSortableColumn="S.No" style="width:20%">S.No<p-sortIcon field=""></p-sortIcon></th>
-              <th pSortableColumn="Plant Name" style="width:30%">User Group Name<p-sortIcon field="Plant Name"></p-sortIcon></th>
-              <th pSortableColumn="Plant Code" style="width:25%">Unique Code<p-sortIcon field="Plant Code"></p-sortIcon></th>
-              <th pSortableColumn="Comments" style="width:20%">Total Users<p-sortIcon field="Comments"></p-sortIcon></th>
-              
+              <th>#</th>
+              <th pSortableColumn="usergroupname" style="width:30%">User Group Name<p-sortIcon field="usergroupname"></p-sortIcon></th>
+              <th pSortableColumn="code" style="width:25%">Unique Code<p-sortIcon field="code"></p-sortIcon></th>
+              <th pSortableColumn="totalusers" style="width:20%">Total Users<p-sortIcon field="totalusers"></p-sortIcon></th>
               <th style="width:80px">Actions</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
             <tr>
-              <th scope="row">{{i+1}}</th>
+              <td>{{ i + 1 }}</td>  
               <td>{{doc?.usergroupname}}</td>
               <td>{{doc?.code}}</td>
-              <td>{{doc?.users}}</td>              
+              <td>{{doc?.totalusers}}</td>              
               <td class="text-center" (click)="editdoc(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
