--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -18,31 +18,29 @@
         <p-table [value]="requests" tableStyleClass="table table-striped">
           <ng-template pTemplate="header">
             <tr>
-              <th>#</th>
-              <th pSortableColumn="RequestCode" style="width:20%">Request Code<p-sortIcon field="RequestCode"></p-sortIcon></th>
+              <th>#</th>              
               <th pSortableColumn="documenttype" style="width:10%">Document Type <p-sortIcon field="documenttype"></p-sortIcon></th>
               <th pSortableColumn="documnetname" style="width:15%">Document Name<p-sortIcon field="documentname"></p-sortIcon></th>
-              <th pSortableColumn="documentnumber" style="width:20%">Document Number by<p-sortIcon field="documentnumber"></p-sortIcon></th>
-              <th pSortableColumn="printedon" style="width:200px">Printed On <p-sortIcon field="printedon"></p-sortIcon></th>
-              <th pSortableColumn="printedby" style="width:200px">Printed By <p-sortIcon field="printedby"></p-sortIcon></th>
-              <th pSortableColumn="printcount" style="width:200px">Printed Count <p-sortIcon field="printcount"></p-sortIcon></th>
-
+              <th pSortableColumn="documentnumber" style="width:20%">Document Number<p-sortIcon field="documentnumber"></p-sortIcon></th>
+              <th pSortableColumn="reason" style="width:200px">Reason <p-sortIcon field="reason"></p-sortIcon></th>
+              <th pSortableColumn="workflow" style="width:200px">workflow <p-sortIcon field="workflow"></p-sortIcon></th>
+              <th pSortableColumn="noofcopies" style="width:200px">Printed Count <p-sortIcon field="noofcopies"></p-sortIcon></th>
+              <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+              <th style="width:80px">Actions</th>
 
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
             <tr>
-              <td>{{ i + 1 }}</td>
-              <td>{{doc?.RequestCode}}</td>
-              <td>{{doc?.documenttype}}</td>
-              <td>{{doc?.documentname}}</td>
-              <td>{{doc?.documentnumber}}</td>
-              <td>{{doc?.printedon}}</td>
-              <td>{{doc?.printedby}}</td>
-              <td>{{doc?.printedby}}</td>
-              <td>{{doc?.printcount}}</td>
+              <td>{{ i + 1 }}</td>              
+              <td>{{doc?.printtype}}</td>
+              <td>{{doc?.documenttitle}}</td>
+              <td>{{doc?.documentno}}</td>
+              <td>{{doc?.reason}}</td>
+              <td>{{doc?.workflow}}</td>
+              <td>{{doc?.noofcopies}}</td>
 
-              <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
+              <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td>
               <td class="text-center" (click)="editdoc(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
