--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/new-print-request.component.html
@@ -12,12 +12,12 @@
             <label for="prefix" class="col-sm-2 col-form-label">Document Number</label>
             <div class="col-sm-10">
               <select class="form-control" id="docnum" name="DocumentNumber" [(ngModel)]="print.DocumentNumber" [disabled]="viewMode">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-                <option>6</option>
+                <option>aa</option>
+                <option>bb</option>
+                <option>cc</option>
+                <option>dd</option>
+                <option>ee</option>
+                <option>ff</option>
               </select>
             </div>
           </div>
