--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Approval-Configuration/approval-configurations.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Approval-Configuration/approval-configurations.component.html
@@ -1,21 +1,19 @@
+
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-      <h4 class="page-title">Approval Configurations</h4>
+      <h4 class="page-title">New Document type Registration</h4>
     </div>
   </div>
   <div class="row p-2">
     <div class="col">
-      <form (ngSubmit)="addapprovalconfig(approvalconfig)" #fm="ngForm">
+      <form (ngSubmit)="adddoctype(documentType)" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
-
-
-          
           <div class="form-group row">
             <label for="documentType" class="col-sm-2 col-form-label">No Of Approvals</label>
             <div class="col-sm-10">
 
-              <select class="form-control" id="noofapprovals" name="noofapprovals" [(ngModel)]="approvalconfig.NoOfApprovals1" [disabled]="viewMode">
+              <select class="form-control" id="noofapprovals" name="noofapprovals" [(ngModel)]="approvals.noofapprovals" [disabled]="viewMode">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -26,11 +24,11 @@
 
             </div>
           </div>
-          
+          <h5 class="page-title">Document Template Configuration</h5>
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">No Of Approvals</label>
             <div class="col-sm-10">
-              <select class="form-control" id="approval2" name="approval2" [(ngModel)]="approvalconfig.NoOfApprovals2" [disabled]="viewMode">
+              <select class="form-control" id="approval2" name="approval2" [(ngModel)]="approvalconfig.approval2" [disabled]="viewMode">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -40,11 +38,11 @@
               </select>
             </div>
           </div>
-          
+          <h5 class="page-title">Workflow Configuration</h5>
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">No Of Approvals</label>
             <div class="col-sm-10">
-              <select class="form-control" id="approval3" name="approval3" [(ngModel)]="approvalconfig.NoOfApprovals3" [disabled]="viewMode">
+              <select class="form-control" id="approval3" name="approval3" [(ngModel)]="approvalconfigs.approval3" [disabled]="viewMode">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -54,8 +52,6 @@
               </select>
             </div>
           </div>
-
-
 
 
 
@@ -73,5 +69,4 @@
     </div>
   </div>
 </div>
-
 
