--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -14,7 +14,9 @@
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table [value]="requestsDatasource" tableStyleClass="table table-striped">
+            <p-table  [value]="requestsDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+            [paginator]="true" [totalRecords]="requestsDatasource.length"
+            [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage" >
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
